# cinema_DRF

./: README.md
cinema/: pyproject.toml
cinema/cinema/: settings.py  urls.py
cinema/movie/: admin.py  models.py  serializers.py  urls.py  views.py
cinema/movie/migrations/: 0001_initial.py
